<resources>
    <string name="app_name">The Corona Map</string>
    <string name="safety_tips">SAFETY TIPS</string>
    <string name="about">ABOUT</string>
    <string name="contact">CONTACT</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="allow_location_access"><u>Allow Location Access</u></string>
    <string name="check_your_symptoms">CHECK YOUR SYMPTOMS</string>
    <string name="if_someone_you_know_or_heard_of_infected_with_coronavirus_let_us_know_it_ll_help_save_lives">If someone you know or heard of, infected with coronavirus? Let us know. It\'ll help save lives.</string>
    <string name="report_a_case">Report a Case</string>
    <string name="report_a_case_">REPORT A CASE</string>
    <string name="view_full_map">VIEW FULL MAP</string>
    <string name="stats_by_country">STATS BY COUNTRY</string>
    <string name="cases">CASES</string>
    <string name="deaths">DEATHS</string>
    <string name="recovered">RECOVERED</string>
    <string name="total_critical">Total Critical</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="give_alert_notifications">Give Alert Notifications</string>
    <string name="immediately_get_relevant_updates_by_turning_on_your_location">Immediately get relevant updates by turning on your location.</string>
    <string name="quick_stats">QUICK STATS</string>
    <string name="showing_stats_for">SHOWING STATS FOR</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="cases_confirmed">Cases Confirmed</string>
    <string name="mortality_rate">(Mortality Rate)</string>
    <string name="see_all_cases_around_the_world">See all cases around the world.</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="use_phone_number">Use Phone Number</string>
    <string name="select_a_language">Select your country</string>
    <string name="english_usa">English   (USA )</string>
    <string name="continue_">Continue</string>
</resources>
