<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.grayhatdevelopers.thecoronamap.ui.fragments.selectcountry.SelectCountryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/world_icon"
            android:drawableLeft="@drawable/world_icon"
            android:drawablePadding="4dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/select_a_language"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/line_border"
            android:drawableEnd="@drawable/down_red"
            android:drawableRight="@drawable/down_red"
            android:drawablePadding="12dp"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal|center_vertical"
            android:paddingLeft="38dp"
            android:paddingTop="6dp"
            android:paddingRight="32dp"
            android:paddingBottom="6dp"
            android:visibility="gone"
            android:text="@string/english_usa"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView57"
            app:layout_constraintStart_toStartOf="@+id/textView57"
            app:layout_constraintTop_toBottomOf="@+id/textView57"
            android:paddingStart="38dp"
            android:paddingEnd="32dp" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:ccp_defaultNameCode="PK"
            app:ccp_showFullName="true"
            app:ccpDialog_keyboardAutoPopup="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false"
            app:layout_constraintEnd_toEndOf="@+id/textView57"
            app:layout_constraintStart_toStartOf="@+id/textView57"
            app:layout_constraintTop_toBottomOf="@+id/textView58" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/thecoronamap"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:fontFamily="@font/lato"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/continue_"
            android:onClick="@{() -> viewModel.continueToLogin()}"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView58" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>